# quadratic-equation

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  quadratic_equation.c  quadratic_equation.h
tests/: CMakeLists.txt  minunit.h  test_quadratic_equation.c
